2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/gradient.pdb: added gradient-is-editable

	* tools/pdbgen/pdb/brush.pdb
	* tools/pdbgen/pdb/palette.pdb: changed mitch_misc to bill_misc
	where correct.

	* app/pdb/brush_cmds.c
	* app/pdb/palette_cmds.c
	* libgimp/gimpbrush_pdb.c
	* libgimp/gimppalette_pdb.c: regenerated.

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c: make previously committed change
	in pressure-size relationship apply only to airbrush, as
	intended.
	
2004-12-31  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c: use the orininal string if
	plug_in_actions_check_translation() fails instead of bailing out.
	Fixes bug #162590.

2004-12-31  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette.[ch]: removed the just added
	gimp_palette_insert_entry() and added a "gint position" parameter
	to gimp_palette_add_entry() instead (no need to have two almost
	identical functions).

	* app/actions/palette-editor-commands.c
	* app/core/gimppalette-import.c
	* app/widgets/gimppaletteeditor.c
	* tools/pdbgen/pdb/palette.pdb: changed accordingly.

	* app/pdb/palette_cmds.c: regenerated.

2004-12-31  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfgbgeditor.[ch]: use the coordinates passed in
	the color drop callback instead of remembering them in the
	drag_motion handler.

2004-12-31  Sven Neumann  <sven@gimp.org>

	* tools/kernelgen.c: fixed rounding so that all brush kernels are
	created with a constant sum of 256.

	* app/paint/gimpbrushcore-kernels.h: regenerated.

	* app/paint/gimpbrushcore.c (gimp_brush_core_subsample_mask): use
	the constant defined un app/paint/gimpbrushcore-kernels.h. Should
	give a tiny speedup.

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c: invert dependence of brush size on
	pressure, using formula from Dave Ahlswede in bug #149576.
	
2004-12-31  Michael Natterer  <mitch@gimp.org>
